Update social media section

--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
     <div class="text">
         <h2>Social Media</h2>
         <p>
+            Cell phone: 618 113 5284<br><br>
+            Email: jathsiry.sanchez.itid@unipolidgo.edu.mx<br><br>
             LinkedIn: <a href="https://www.linkedin.com/in/jathsiry-lizeth-sanchez-manrique-174740345/" target="_blank">My LinkedIn</a><br><br>
             GitHub: <a href="https://github.com/909092006" target="_blank">Jath124</a><br><br>
             Instagram:<a href="https://www.instagram.com/jathsiry.uvk/" target="_blank">Jathsiry.uvk</a><br><br>
