--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         <form>
             <input type="text" placeholder="Your Name" required>
             <input type="email" placeholder="Your Email" required>
+            <input type="number" placeholder="Your Cellphone" required>
             <textarea placeholder="Your Message" rows="4" required></textarea>
             <button type="submit">Send Message</button>
         </form>
