--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 
     <div class="text">
-        <h2>Contact Me</h2>
+        <h2>Contact With Me</h2>
 
         <form>
             <input type="text" placeholder="Your Name" required>
